[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/characters/player_standing.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://sounds/jump.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/characters/player_drilling_1.png" type="Texture" id=4]
[ext_resource path="res://sounds/sfx_loop_drilling.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/characters/player_drilling_2.png" type="Texture" id=6]
[ext_resource path="res://sounds/drill_bounce.wav" type="AudioStream" id=7]
[ext_resource path="res://src/actors/DebugDraw.gd" type="Script" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "stand",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "drill",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 30 )

[sub_resource type="CircleShape2D" id=3]
radius = 15.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12, 12 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 18 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 8
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -64 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "stand"
flip_h = true

[node name="CollisionStanding" type="CollisionShape2D" parent="."]
position = Vector2( 0, -30 )
shape = SubResource( 2 )

[node name="CollisionDrilling" type="CollisionShape2D" parent="."]
position = Vector2( 0, -15 )
shape = SubResource( 3 )
disabled = true

[node name="SFX" type="Node2D" parent="."]

[node name="Drill" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 5 )

[node name="DrillBounce" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 7 )

[node name="Jump" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 3 )

[node name="Timers" type="Node2D" parent="."]

[node name="DrillStart" type="Timer" parent="Timers"]
wait_time = 0.3
one_shot = true

[node name="DrillFallDelay" type="Timer" parent="Timers"]
process_mode = 0
wait_time = 0.3
one_shot = true

[node name="DestructPoller" type="Timer" parent="Timers"]
process_mode = 0
one_shot = true

[node name="RotatePoller" type="Timer" parent="Timers"]
process_mode = 0
one_shot = true

[node name="FloorCollider" type="Area2D" parent="."]
position = Vector2( 0, 24 )
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloorCollider"]
position = Vector2( 0, -12 )
shape = SubResource( 4 )

[node name="FrontCollider" type="Area2D" parent="."]
position = Vector2( 20, -30 )
collision_layer = 0
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="FrontCollider"]
position = Vector2( -4, 0 )
shape = SubResource( 5 )

[node name="DebugDraw" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timers/DrillFallDelay" to="." method="_on_DrillFallDelay_timeout"]
