[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Actors/player_standing.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://sounds/jump.wav" type="AudioStream" id=3]
[ext_resource path="res://src/Actors/player_drilling_1.png" type="Texture" id=4]
[ext_resource path="res://sounds/sfx_loop_drilling.wav" type="AudioStream" id=5]
[ext_resource path="res://src/Actors/player_drilling_2.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "drill",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "stand",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.5718, 29.5134 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 8
script = ExtResource( 2 )
gravity = 500.0

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -65 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -64 )
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
animation = "drill"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -30 )
shape = SubResource( 1 )

[node name="DrillFallDelay" type="Timer" parent="."]
process_mode = 0
wait_time = 0.3
one_shot = true

[node name="SfxJump1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="SfxDrillOn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="timeout" from="DrillFallDelay" to="." method="_on_DrillFallDelay_timeout"]
